ad change only popundar

--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV Shows & Movies - Categories</title>
     <link rel="stylesheet" href="categories.css">
-    
+    <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
     <header class="header">
@@ -44,26 +44,8 @@
             <!-- Add more categories as needed -->
         </div>
     </section>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : 'd62fa7a8f8a326a7ca168a35b8da7c6f',
-            'format' : 'iframe',
-            'height' : 90,
-            'width' : 728,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/d62fa7a8f8a326a7ca168a35b8da7c6f/invoke.js"></script>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : 'd62fa7a8f8a326a7ca168a35b8da7c6f',
-            'format' : 'iframe',
-            'height' : 90,
-            'width' : 728,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/d62fa7a8f8a326a7ca168a35b8da7c6f/invoke.js"></script>
+    
+
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 TVShows. All rights reserved.</p>
