--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TV Shows Streaming</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    
+    <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
    <!-- <header>
@@ -95,17 +95,7 @@
                     <img src="images/2.jpg"  class="hover-image" alt="Show 2">
                     <h3>Baalveer Season 4</h3></a>
                 </div>
-                <script type="text/javascript">
-                  atOptions = {
-                    'key' : '6776d61603e3b474338b4996d79df74e',
-                    'format' : 'iframe',
-                    'height' : 250,
-                    'width' : 300,
-                    'params' : {}
-                  };
-                </script>
-                <script type="text/javascript" src="//rancidmorsel.com/6776d61603e3b474338b4996d79df74e/invoke.js"></script>
-                <div class="show">
+                                <div class="show">
                   <a href="kapil.html"class ="a1">
                     <img src="images/3.jpg" class="hover-image" alt="Show 3">
                     <h3>The Great Kapil Show</h3></a>
@@ -127,37 +117,7 @@
             
         </div>
     </section>
-    <script type="text/javascript">
-      atOptions = {
-        'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-        'format' : 'iframe',
-        'height' : 60,
-        'width' : 468,
-        'params' : {}
-      };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
-    <script type="text/javascript">
-      atOptions = {
-        'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-        'format' : 'iframe',
-        'height' : 60,
-        'width' : 468,
-        'params' : {}
-      };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
-    <script type="text/javascript">
-      atOptions = {
-        'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-        'format' : 'iframe',
-        'height' : 60,
-        'width' : 468,
-        'params' : {}
-      };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
-
+  
   <footer class="footer">
   	 <div class="container">
   	 	<div class="row">
@@ -218,35 +178,5 @@
   	 </div>
   </footer>
 
-  <script type="text/javascript">
-    atOptions = {
-      'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-      'format' : 'iframe',
-      'height' : 60,
-      'width' : 468,
-      'params' : {}
-    };
-  </script>
-  <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
-  <script type="text/javascript">
-    atOptions = {
-      'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-      'format' : 'iframe',
-      'height' : 60,
-      'width' : 468,
-      'params' : {}
-    };
-  </script>
-  <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
-  <script type="text/javascript">
-    atOptions = {
-      'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-      'format' : 'iframe',
-      'height' : 60,
-      'width' : 468,
-      'params' : {}
-    };
-  </script>
-  <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
-</body>
+  </body>
 </html>
