--- a/today.html
+++ b/today.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Today's Episodes</title>
     <link rel="stylesheet" href="today.css">
+    <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -29,16 +30,6 @@
         <section class="episodes">
             <div class="container">
                 
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-            'format' : 'iframe',
-            'height' : 60,
-            'width' : 468,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
     <!-- Today's Episodes Section -->
     <section class="episodes">
         <div class="container">
@@ -53,16 +44,6 @@
                     <button class="download-btn">Download</button></a>
                 </div>
             </div>
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-                    'format' : 'iframe',
-                    'height' : 60,
-                    'width' : 468,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             <div class="episode">
                 <h2>Episode 20 : Baalveer</h2>
                 <p>Date: June 3, 2024</p>
@@ -75,17 +56,7 @@
                     <button class="download-btn">Download</button>
                 </div>
             </div>
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-                    'format' : 'iframe',
-                    'height' : 60,
-                    'width' : 468,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
-        </div>
+                   </div>
     </section>
 
 </body>
