--- a/webseries.html
+++ b/webseries.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebSeries</title>
     <link rel="stylesheet" href="webseries.css">
+    <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
     <header>
@@ -22,16 +23,6 @@
 
     <main>
         <section class="gallery">
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-                    'format' : 'iframe',
-                    'height' : 60,
-                    'width' : 468,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             
             <!-- Repeat similar blocks for each show -->
             <div class="show-item">
@@ -42,16 +33,6 @@
                     <p>Release Date: 31 May, 2024</p>
                 </div>
             </div>
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-                    'format' : 'iframe',
-                    'height' : 60,
-                    'width' : 468,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             <div class="show-item">
                 <img src="images/coming soon.avif" alt="Show 2">
                 <div class="show-details">
@@ -59,16 +40,6 @@
                     <p>Release Date: upcoming</p>
                 </div>
             </div>
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-                    'format' : 'iframe',
-                    'height' : 60,
-                    'width' : 468,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
             <!-- ... more show items up to 20 ... -->
         </section>
     </main>
