--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="about.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
      crossorigin="anonymous"></script>
+     <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
     <header class="header">
@@ -25,16 +26,6 @@
             </nav>
         </div>
     </header>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '6776d61603e3b474338b4996d79df74e',
-            'format' : 'iframe',
-            'height' : 250,
-            'width' : 300,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6776d61603e3b474338b4996d79df74e/invoke.js"></script>
     
     <section class="about-us">
         <div class="container">
@@ -55,25 +46,6 @@
             <p>&copy; 2024 TVShows & Movies. All rights reserved.</p>
         </div>
     </footer>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : 'd62fa7a8f8a326a7ca168a35b8da7c6f',
-            'format' : 'iframe',
-            'height' : 90,
-            'width' : 728,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/d62fa7a8f8a326a7ca168a35b8da7c6f/invoke.js"></script>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : 'd62fa7a8f8a326a7ca168a35b8da7c6f',
-            'format' : 'iframe',
-            'height' : 90,
-            'width' : 728,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/d62fa7a8f8a326a7ca168a35b8da7c6f/invoke.js"></script>
+   
 </body>
 </html>
