--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Our Telegram Channel</title>
     <link rel="stylesheet" href="contact.css">
-    
+    <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 
 <header class="header">
@@ -20,30 +20,6 @@
     </div>
 </header>
 <body>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-            'format' : 'iframe',
-            'height' : 60,
-            'width' : 468,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
-    <div class="container">
-        <h1>Connect via Telegram </h1>
-        <p>Feel free to contact us we replay As Soon As Possible</p>
-        <a href="https://t.me/mohitjangra2903" class="telegram-button" target="_blank">Join Telegram</a>
-    </div>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '6776d61603e3b474338b4996d79df74e',
-            'format' : 'iframe',
-            'height' : 250,
-            'width' : 300,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6776d61603e3b474338b4996d79df74e/invoke.js"></script>
+   
 </body>
 </html>
