--- a/kapil.html
+++ b/kapil.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kapil Show</title>
     <link rel="stylesheet" href="kapil.css">
+    <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
     <header>
@@ -42,16 +43,6 @@
             <!-- Continue repeating for all videos -->
         </div>
     </main>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '6ff60ab0a55a0b5d5ae1f29f098b14bc',
-            'format' : 'iframe',
-            'height' : 60,
-            'width' : 468,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6ff60ab0a55a0b5d5ae1f29f098b14bc/invoke.js"></script>
     
 </body>
 </html>
