--- a/test.html
+++ b/test.html
@@ -3,78 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baalveer</title>
+    <title>TV Shows Streaming</title>
     <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
-    <header>
-        <h1>Baalveer</h1>
-        <nav>
-            <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle" class="menu-icon">&#9776;</label>
-            <ul class="nav-list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="categories.html">Categories</a></li>
-                <li><a href="shows.html">Shows</a></li>
-            </ul>
-        </nav>
-        <div class="search-container">
-            <input type="text" id="searchInput" placeholder="Search for videos...">
-            <button id="searchButton">Search</button>
+    <header class="header">
+        <div class="container">
+            <h1 class="logo">ShowPlay</h1>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="categories.html">Categories</a></li>
+                    <li><a href="shows.html">Shows</a></li>
+                    <li><a href="movies.html">Movies</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-    
-    <main>
-        <div class="video-gallery" id="videoGallery">
-            <!-- Repeat this block for each video -->
-            <div class="video-item">
-                <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/baalveer:2?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
-                <div class="video-info">
-                    <h2 class="video-title">Baalveer</h2>
-                    <p class="video-date">May 31, 2024</p>
-                    <a href="https://dlupload.com/filedetail/712698321" class="download-button">Download</a>
+
+    <section class="hero">
+        <div class="container">
+            <div class="floating-text">
+                <h2>Welcome to ShowPlay</h2>
+            </div>
+            <p>Stream your favorite TV shows anytime, anywhere.</p>
+        </div>
+    </section>
+
+    <section class="featured">
+        <div class="container">
+            <h2>Featured Shows, Movies & Webseries</h2>
+            <div class="shows-grid">
+                <!-- Your featured shows, movies, and webseries content here -->
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-slider">
+                <!-- Footer links go here -->
+                <div> <!-- Slide 1 -->
+                    <div class="footer-col">
+                        <h4>Shows</h4>
+                        <ul>
+                            <li><a href="tmkoc.html">Tarrak Mehta ka Ooltha Chashma</a></li>
+                            <li><a href="baalveer.html">Baalveer</a></li>
+                            <li><a href="kapil.html">The Great Indian Kapil Show</a></li>
+                            <li><a href="#">Wagle Ki Duniya</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-
-
-            <div class="video-item">
-              <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/baalveer:2?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
-              <div class="video-info">
-                  <h2 class="video-title">Baalveer EP2</h2>
-                  <p class="video-date">May 31, 2024</p>
-                  <a href="https://dlupload.com/filedetail/712698321" class="download-button">Download</a>
-              </div>
-          </div>
-          <div class="video-item">
-            <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/baalveer:2?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
-            <div class="video-info">
-                <h2 class="video-title">Baalveer EP 3</h2>
-                <p class="video-date">May 31, 2024</p>
-                <a href="https://dlupload.com/filedetail/712698321" class="download-button">Download</a>
+                <div> <!-- Slide 2 -->
+                    <div class="footer-col">
+                        <h4>Movies</h4>
+                        <ul>
+                            <li><a href="#">Hum Do Humare Do</a></li>
+                            <li><a href="#">Golmaal</a></li>
+                            <li><a href="#">Jawan</a></li>
+                            <li><a href="#">Pathan</a></li>
+                            <li><a href="#">Varisu</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div> <!-- Slide 3 -->
+                    <div class="footer-col">
+                        <h4>Web Series</h4>
+                        <ul>
+                            <li><a href="panchyat.html">Panchayat S3</a></li>
+                            <li><a href="#">Bahubali</a></li>
+                            <li><a href="#">Family Man</a></li>
+                            <li><a href="#">Nam Ni Yad</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Add more slides as needed -->
             </div>
         </div>
-        <div class="video-item">
-          <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/baalveer:2?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
-          <div class="video-info">
-              <h2 class="video-title">Baalveer EP 4</h2>
-              <p class="video-date">May 31, 2024</p>
-              <a href="https://dlupload.com/filedetail/712698321" class="download-button">Download</a>
-          </div>
-      </div>
+    </footer>
 
-            <!-- Repeat for other videos -->
-        </div>
-    </main>
-    <script type="text/javascript">
-        atOptions = {
-            'key' : '6776d61603e3b474338b4996d79df74e',
-            'format' : 'iframe',
-            'height' : 250,
-            'width' : 300,
-            'params' : {}
-        };
-    </script>
-    <script type="text/javascript" src="//rancidmorsel.com/6776d61603e3b474338b4996d79df74e/invoke.js"></script>
-    <script src="search.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="test.js"></script>
 </body>
 </html>
