--- a/baalveer.html
+++ b/baalveer.html
@@ -28,11 +28,23 @@
     <main>
         <div id="searchResults"></div>
         <div class="video-gallery" id="videoGallery">
+            <div class="video-item" id="video1">
+                <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/Baalveer_4_S04_E21_Repairing_The_Bhasm_Shool_720p_SonyLIV_WEB_DL:8?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>                <div class="video-info">
+                    <h2 class="video-title">Baalveer Ep 21</h2>
+                    <p class="video-date">June 3, 2024</p>
+                    <a href="https://dlupload.com/filedetail/764107215" class="download-button">Download</a>
+                    <button class="bookmark-button" onclick="bookmarkVideo(this)">☆</button>
+                    <div class="like-dislike-container">
+                        <button class="like-button" onclick="likeVideo('video1')">👍 <span id="like-count-video1">0</span></button>
+                        <button class="dislike-button" onclick="dislikeVideo('video1')">👎 <span id="dislike-count-video1">0</span></button>
+                    </div>
+                </div>
+            </div>
             <!-- Repeat this block for each video -->
             <div class="video-item" id="video1">
                 <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/baalveer:2?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
                 <div class="video-info">
-                    <h2 class="video-title">Baalveer</h2>
+                    <h2 class="video-title">Baalveer Ep 20</h2>
                     <p class="video-date">May 31, 2024</p>
                     <a href="https://dlupload.com/filedetail/712698321" class="download-button">Download</a>
                     <button class="bookmark-button" onclick="bookmarkVideo(this)">☆</button>
