NEW VERSION LAUNCH 08 JUNE FINAL UI

--- a/about.html
+++ b/about.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - TVShows & Movies</title>
+    <title>About Us - ShowmoPlay</title>
     <link rel="stylesheet" href="about.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7993259194717520"
-     crossorigin="anonymous"></script>
-     <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="logo">TVShows & Movies</h1>
+            <h1 class="logo">About US</h1>
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="shows.html">Shows</a></li>
+                    <li><a href="showschannels.html">Shows</a></li>
                     <li><a href="movies.html">Movies</a></li>
                     <li><a href="categories.html">Categories</a></li>
                     <li><a href="about.html" class="active">About Us</a></li>
