--- a/today.html
+++ b/today.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Today's Episodes</title>
     <link rel="stylesheet" href="today.css">
-    <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
+        <button class="back-button" onclick="history.back()">Back</button>
+
         <div class="container">
             <a href="#" class="brand">Today's Episodes</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="shows.html">Shows</a></li>
-                <li><a href="movies.html">Movies</a></li>
-                <li><a href="webseries.html">Webseries</a></li>
+                <li><a href="showschannels.html">Shows Channels</a></li>
+                <li><a href="cartoonchannel.html">Cartoons</a></li>
             </ul>
             <div class="hamburger">
                 <div class="bar"></div>
@@ -30,10 +30,11 @@
     <section class="episodes">
         <div class="container">
             <div class="episode">
-                <h2>Episode 21 : Baalveer</h2>
-                <p>Date: June 3, 2024</p>
-                <div id="countdown2" class="countdown"></div>
-                <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/Baalveer_4_S04_E21_Repairing_The_Bhasm_Shool_720p_SonyLIV_WEB_DL:8?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>                <div class="buttons">
+                <h2>Episode 1 : Baalveer</h2>
+                <p>Date: June 23, 2024</p>
+                <div id="countdown1" class="countdown"></div>
+             <!--   <iframe id="odysee-iframe" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/Baalveer_4_S04_E21_Repairing_The_Bhasm_Shool_720p_SonyLIV_WEB_DL:8?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>-->            
+                    <div class="buttons">
                     <button class="watch-btn">Episode Time : 7 PM</button>
                     <a href="com/filedetail/764107215">
                     <button class="download-btn">Download</button></a>
@@ -41,27 +42,18 @@
             </div>
             
             <div class="episode">
-                <h2>Episode 4101 : Tarrak Mehta Ka Ooltah Chashmah</h2>
-                <p>Date: June 3, 2024</p>
-                <div id="countdown3" class="countdown"></div>
-                <iframe id="odysee-iframe2" style="width:100%; aspect-ratio:16 / 9;" src="" allowfullscreen></iframe>
+                <h2>Episode 1 : Tarrak Mehta Ka Ooltah Chashmah</h2>
+                <p>Date: June 23, 2024</p>
+                <div id="countdown2" class="countdown"></div>
+               <!-- <iframe id="odysee-iframe2" style="width:100%; aspect-ratio:16 / 9;" src="" allowfullscreen></iframe>-->
                 <div class="buttons">
                     <button class="watch-btn">Episode Time : 8:30 PM</button>
                     <button class="download-btn">Download</button>
                 </div>
             </div>
+
+
         </div>
-            <div class="episode">
-                <h2>Episode 4100 :  Tarrak Mehta Ka Ooltah Chashmah</h2>
-                <p>Date: June 1, 2024</p>
-                <div id="countdown1" class="countdown"></div>
-                <iframe id="odysee-iframe1" style="width:100%; aspect-ratio:16 / 9;" src="https://odysee.com/$/embed/@mkj2903:1/Taarak_Mehta_Ka_Ooltah_Chashmah_Season_41_Episode_4100_Abdul_Ki:5?r=6ZnbraDGq9PvJivWzmusCVyWsgjMZD6y" allowfullscreen></iframe>
-                <div class="buttons">
-                    <button class="watch-btn">Episode Time : 8:30 PM</button>
-                    <a href="https://dlupload.com/filedetail/668183564">
-                    <button class="download-btn">Download</button></a>
-                </div>
-            </div>
             
 
     </section>
