--- a/categories.html
+++ b/categories.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TV Shows & Movies - Categories</title>
     <link rel="stylesheet" href="categories.css">
-    <script type='text/javascript' src='//rancidmorsel.com/24/f7/5e/24f75e4d76613263e672f6e1647ca9c4.js'></script>
 </head>
 <body>
     <header class="header">
@@ -14,10 +13,11 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="shows.html">Shows</a></li>
+                    <li><a href="showschannels.html">Shows</a></li>
                     <li><a href="categories.html" class="active">Categories</a></li>
                     <li><a href="movies.html">Movies</a></li>
                     <li><a href="webseries.html">WebSeries</a></li>
+                    <li><a href="cartoonchannel.html">Cartoons</a></li>
                 </ul>
             </nav>
         </div>
@@ -29,18 +29,25 @@
             <div class="category">
                 <h3>TV Shows</h3>
                 <p>Explore our collection of popular TV shows across various genres.</p>
-                <a href="shows.html" class="explore-button">Explore TV Shows</a>
+                <a href="" class="explore-button">Explore TV Shows</a>
             </div>
+            <div class="category">
+                <h3>Cartoons</h3>
+                <p>Discover a wide range of cartoons for every mood and occasion.</p>
+                <a href="" class="explore-button">Explore WebSeries</a>
+            </div>
+           
             <div class="category">
                 <h3>Movies</h3>
                 <p>Discover a wide range of movies for every mood and occasion.</p>
-                <a href="movies.html" class="explore-button">Explore Movies</a>
+                <a href="" class="explore-button">Explore Movies</a>
             </div>
             <div class="category">
                 <h3>WebSeries</h3>
                 <p>Discover a wide range of webseries for every mood and occasion.</p>
-                <a href="webseries.html" class="explore-button">Explore WebSeries</a>
+                <a href="" class="explore-button">Explore WebSeries</a>
             </div>
+            
             <!-- Add more categories as needed -->
         </div>
     </section>
